# nagi

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
dev/: release.sh  setup.sh
migrations/: 20240912134743_create_notes.up.sql
src/: main.rs
src/front/: package-lock.json  package.json  vite.config.ts
src/front/src/: App.tsx  app.css  app.scss  app.tsx  header.tsx  main.tsx  note_list_item.tsx  root.scss  root.tsx  types.tsx
src/nagi/: dir.rs  events.rs  mod.rs  notes.rs  settings.rs  utils.rs
